# axum-async-graphql

./: Cargo.toml  README.md
src/: main.rs  model.rs  schema.rs
