[package]
name = "axum-async-graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.5"
async-graphql-axum = "7.0.5"
axum = "0.7.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
