[package]
name = "axum-async-graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.5"
async-graphql-axum = "7.0.5"
axum = "0.7.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.8.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
